--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 
     <!-- Banner fijo -->
-    <div class="banner">
-        <h1>INFORME DE SECRETARIOS</pre></h1>
+    <div class="banner" id="bannerPrincipal">
+        <h1>INFORME DE SECRETARIOS</h1>
     </div>
 
     <!-- CONTENIDO DINÁMICO -->
